--- a/contacto.html
+++ b/contacto.html
@@ -125,15 +125,25 @@
                                 <br>
                                 <div class="card" style="display: block; text-align: center;">
                                     <article class="card-body mx-auto" style="max-width: 400px;">
-                                        <form class="form-signin">
+                                        <form class="form-signin needs-validation" novalidate>
                                             <h4 class="card-title mt-3 text-center">Iniciar Sesión</h4>
                                             <br>
-                                            <P>Ingresa tu Correo:</P>
-                                            <label for="inputEmail" class="sr-only">Correo Electrónico</label>
-                                            <input type="email" id="inputEmail" class="form-control" placeholder="ejemplo@ejemplo.com" required autofocus>
-                                            <p>Ingresa tu Contrasña:</p>
-                                            <label for="inputPassword" class="sr-only">Contraseña</label>
+                                            <label for="email" class="form-label">Correo Electrónico:</label>
+                                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                                            <div class="valid-feedback">
+                                                ¡El correo luce bien!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                ¡Escriba un correo válido!
+                                            </div>
+                                            <label for="inputPassword" class="form-label">Contraseña:</label>
                                             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                                            <div class="valid-feedback">
+                                                ¡La contraseña luce bien!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                ¡Contraseña Errónea!
+                                            </div>
                                             <div class="checkbox mb-3">
                                                 <label>
                                                     <br>
@@ -159,13 +169,13 @@
                                         <p class="divider-text">
                                             <span>O TAMBIÉN</span>
                                         </p>
-                                        <form>
+                                        <form class="needs-validation" novalidate>
                                             <!-- NOMBRE -->
                                             <div class="form-group input-group">
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text icono"> <i class="fa fa-user"></i> </span>
                                                 </div>
-                                                <input name="" class="form-control" placeholder="Nombre" type="text">
+                                                <input name="nombre" class="form-control" placeholder="Nombre" type="text" required>
                                             </div>
                                             <!-- EMAIL -->
                                             <br>
@@ -173,7 +183,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text icono"> <i class="fa fa-envelope"></i> </span>
                                                 </div>
-                                                <input name="" class="form-control" placeholder="Correo Electrónico" type="email">
+                                                <input name="email" class="form-control" placeholder="Correo Electrónico" type="email" required>
                                             </div>
                                             <!-- TELEFONO -->
                                             <br>
@@ -186,7 +196,7 @@
                                                 <option value="1">+34</option>
                                                 <option value="2">+42</option>
                                             </select>
-                                                <input name="" class="form-control" placeholder="Número de Teléfono" type="text">
+                                                <input name="phone" class="form-control" placeholder="Número de Teléfono" type="text" required>
                                             </div>
                                             <!-- CONTRASEÑA -->
                                             <br>
@@ -194,7 +204,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text icono"> <i class="fa fa-lock"></i> </span>
                                                 </div>
-                                                <input class="form-control" placeholder="Crear Contraseña" type="password">
+                                                <input name="contraseña" class="form-control" placeholder="Crear Contraseña" type="password" required>
                                             </div>
                                             <!-- REPETIR CONTRASEÑA -->
                                             <br>
@@ -202,7 +212,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text icono"> <i class="fa fa-lock"></i> </span>
                                                 </div>
-                                                <input class="form-control" placeholder="Repetir Contraseña" type="password">
+                                                <input name="re-contraseña" class="form-control" placeholder="Repetir Contraseña" type="password" required>
                                             </div>
                                             <!-- CREAR -->
                                             <br>
@@ -279,6 +289,8 @@
         </div>
     </footer>
 
+    <!-- SCRIPTS -->
+    <script type="text/javascript" src="js/formulario-validacion.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 </body>
