--- a/albumAutos.html
+++ b/albumAutos.html
@@ -524,7 +524,7 @@
     </footer>
 
     <!-- SCRIPTS -->
-    <script type="text/javascript" src="js/formularios.js"></script>
+    <script type="text/javascript" src="js/formulario-validacion.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 </body>
