--- a/contacto.html
+++ b/contacto.html
@@ -251,8 +251,32 @@
 
         <textarea name="comments" cols="50" rows="10" placeholder="Déjame tus comentarios *" required></textarea>
 
+        <div class="contact-form-loader text-center">
+            <img class="none" src="img/loader.svg" alt="Enviando...">
+        </div>
+
         <input class="btn-contact" type="submit" value="ENVIAR MENSAJE">
     </form>
+
+    <!-- Mensaje al enviar el formulario -->
+    <article id="gracias" class="modal">
+        <div class="modal-content">
+            <article class="contact-form-response">
+              <h3>
+                ¡Muchas Gracias!
+                <br>
+                Por tus comentarios
+              </h3>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M12,18c4,0,5-4,5-4H7C7,14,8,18,12,18z" />
+                <path
+                  d="M12,2C6.486,2,2,6.486,2,12c0,5.514,4.486,10,10,10s10-4.486,10-10C22,6.486,17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8 s3.589-8,8-8s8,3.589,8,8S16.411,20,12,20z" />
+                <path
+                  d="M13 12l2 .012C15.012 11.55 15.194 11 16 11s.988.55 1 1h2c0-1.206-.799-3-3-3S13 10.794 13 12zM8 11c.806 0 .988.55 1 1h2c0-1.206-.799-3-3-3s-3 1.794-3 3l2 .012C7.012 11.55 7.194 11 8 11z" />
+              </svg>
+            </article>
+          </div>
+    </article>
 
 
     <!-- FOOTER -->
@@ -290,7 +314,8 @@
     </footer>
 
     <!-- SCRIPTS -->
-    <script type="text/javascript" src="js/formularios.js"></script>
+    <script type="text/javascript" src="js/formulario-validacion.js"></script>
+    <script src="js/envio-formulario.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 </body>
