--- a/contacto.html
+++ b/contacto.html
@@ -245,11 +245,11 @@
 
     <!-- Contacto -->
     <form class="contact-form box-shadow-1">
-        <input type="text" name="name" placeholder="Ingresa tu nombre *" title="Nombre sólo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$">
+        <input type="text" name="nombre" placeholder="Ingresa tu nombre *" title="Nombre sólo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
 
-        <input type="email" name="email" placeholder="Ingresa tu correo *" title="Email incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+        <input type="email" name="correo" placeholder="Ingresa tu correo *" title="Email incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
 
-        <textarea name="comments" cols="50" rows="10" placeholder="Déjame tus comentarios *" required></textarea>
+        <textarea name="comentarios" cols="50" rows="10" placeholder="Déjame tus comentarios *" title="Tu comentario no debe exceder los 255 carácteres" data-pattern="^.{1,255}$" required></textarea>
 
         <div class="contact-form-loader text-center">
             <img class="none" src="img/loader.svg" alt="Enviando...">
@@ -315,6 +315,7 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="js/formulario-validacion.js"></script>
+    <script src="js/validacion-contacto.js"></script>
     <script src="js/envio-formulario.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
