Mejorando loader agregado al formulario

--- a/contacto.html
+++ b/contacto.html
@@ -251,8 +251,8 @@
 
         <textarea name="comentarios" cols="50" rows="10" placeholder="Déjame tus comentarios *" title="Tu comentario no debe exceder los 255 carácteres" data-pattern="^.{1,255}$" required></textarea>
 
-        <div class="contact-form-loader text-center">
-            <img class="none" src="img/loader.svg" alt="Enviando...">
+        <div class="contact-form-loader text-center none">
+            <img  src="img/loader.svg" alt="Enviando...">
         </div>
 
         <input class="btn-contact" type="submit" value="ENVIAR MENSAJE">
