--- a/albumAutos.html
+++ b/albumAutos.html
@@ -238,28 +238,28 @@
         <a href="#image4" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/maserattiCon01.jpg" alt="">
         <a href="#image2" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image2">
         <a href="#image1" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/maserattiCon02.jpg" alt="">
         <a href="#image3" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image3">
         <a href="#image2" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/maserattiCon03.jpg" alt="">
         <a href="#image4" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image4">
         <a href="#image3" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/maserattiCon04.jpg" alt="">
         <a href="#image1" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <span class="linea"></span>
     <!-- Volkswagen Hatchback -->
@@ -276,28 +276,28 @@
         <a href="#image8" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/volkswagenHb01.jpg" alt="">
         <a href="#image6" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image6">
         <a href="#image5" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/volkswagenHb02.jpg" alt="">
         <a href="#image7" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image7">
         <a href="#image6" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/volkswagenHb03.jpg" alt="">
         <a href="#image8" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image8">
         <a href="#image7" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/volkswagenHb04.jpg" alt="">
         <a href="#image5" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <span class="linea"></span>
     <!-- Renalut Furgones -->
@@ -314,28 +314,28 @@
         <a href="#image12" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/renalutFg01.jpg" alt="">
         <a href="#image10" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image10">
         <a href="#image9" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/renalutFg02.jpg" alt="">
         <a href="#image11" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image11">
         <a href="#image10" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/renalutFg03.jpg" alt="">
         <a href="#image12" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image12">
         <a href="#image11" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/renalutFg04.jpg" alt="">
         <a href="#image9" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <span class="linea"></span>
     <!-- Tesla Sedan -->
@@ -352,28 +352,28 @@
         <a href="#image16" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/teslaSedan01.jpg" alt="">
         <a href="#image14" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image14">
         <a href="#image13" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/teslaSedan02.jpg" alt="">
         <a href="#image15" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image15">
         <a href="#image14" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/teslaSedan03.jpg" alt="">
         <a href="#image16" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image16">
         <a href="#image15" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/teslaSedan04.jpg" alt="">
         <a href="#image13" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <span class="linea"></span>
     <!-- Toyota Doble Cabina -->
@@ -390,28 +390,28 @@
         <a href="#image20" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/toyotaDc01.jpg" alt="">
         <a href="#image18" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image18">
         <a href="#image19" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/toyotaDc02.jpg" alt="">
         <a href="#image17" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image19">
         <a href="#image20" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/toyotaDc03.jpg" alt="">
         <a href="#image18" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image20">
         <a href="#image19" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/toyotaDc04.jpg" alt="">
         <a href="#image17" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <span class="linea"></span>
     <!-- Nissan Station Wagon -->
@@ -428,28 +428,28 @@
         <a href="#image24" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/nissanSw01.jpg" alt="">
         <a href="#image22" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image22">
         <a href="#image21" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/nissanSw02.jpg" alt="">
         <a href="#image23" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image23">
         <a href="#image22" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/nissanSw03.jpg" alt="">
         <a href="#image24" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image24">
         <a href="#image23" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/nissanSw04.jpg" alt="">
         <a href="#image21" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <span class="linea"></span>
     <!-- Honda SUV -->
@@ -466,28 +466,28 @@
         <a href="#image28" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/hondaSuv01.jpg" alt="">
         <a href="#image26" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image26">
         <a href="#image25" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/hondaSuv02.jpg" alt="">
         <a href="#image27" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image27">
         <a href="#image26" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/hondaSuv03.jpg" alt="">
         <a href="#image28" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
 
     <article class="light-box" id="image28">
         <a href="#image27" class="next"><i class="fas fa-arrow-left"></i></a>
         <img src="img/hondaSuv04.jpg" alt="">
         <a href="#image25" class="next"><i class="fas fa-arrow-right"></i></a>
-        <a href="#" class="close">X</a>
+        <a href="#close" class="close">X</a>
     </article>
     <!-- FOOTER -->
     <footer class="footer bg-dark ">
