fix validacion login

--- a/index.html
+++ b/index.html
@@ -127,21 +127,25 @@
                                         <form class="form-signin needs-validation" novalidate>
                                             <h4 class="card-title mt-3 text-center">Iniciar Sesión</h4>
                                             <br>
-                                            <label for="email" class="form-label">Correo Electrónico:</label>
-                                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
-                                            <div class="valid-feedback">
-                                                ¡El correo luce bien!
+                                            <div>
+                                                <label for="email" class="form-label">Correo Electrónico:</label>
+                                                <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                                                <div class="valid-feedback">
+                                                    ¡El correo luce bien!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    ¡Escriba un correo válido!
+                                                </div>
                                             </div>
-                                            <div class="invalid-feedback">
-                                                ¡Escriba un correo válido!
-                                            </div>
-                                            <label for="inputPassword" class="form-label">Contraseña:</label>
-                                            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                                            <div class="valid-feedback">
-                                                ¡La contraseña luce bien!
-                                            </div>
-                                            <div class="invalid-feedback">
-                                                ¡Contraseña Errónea!
+                                            <div>
+                                                <label for="inputPassword" class="form-label">Contraseña:</label>
+                                                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                                                <div class="valid-feedback">
+                                                    ¡La contraseña luce bien!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    ¡Contraseña Errónea!
+                                                </div>
                                             </div>
                                             <div class="checkbox mb-3">
                                                 <label>
