--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Llamando archivo que agrega el header y footer con AJAX -->
+    <!-- Llamando archivo que agrega el header y footer con AJAX -->
     <script src="js/include-html.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
@@ -37,6 +37,19 @@
 <body>
     <!-- Incluyendo Header -->
     <div data-include="assets/header.html"></div>
+
+    <!-- HeroImage -->
+    <section class="home">
+        <article class="hero-image">
+            <aside class="hero-image-opacity">
+                <div class="hero-image-content">
+                    <h2 class="hero-image-title ">
+                        Raio Macuin<br>siempre contigo
+                    </h2>
+                </div>
+            </aside>
+        </article>
+    </section>
 
     <section class="contenido ">
         <!-- agregando al 'style' una variable CSS con la imagen del HeroImage-->
