--- a/vendeauto.html
+++ b/vendeauto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Llamando archivo que agrega el header y footer con AJAX -->
+    <script src="js/include-html.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="css/vendeauto.css">
@@ -14,88 +16,17 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand logo-empresa" href="#">
-                    <img src="img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top" style="margin-left: 10px;"> RAIO MACUIN
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Tipo de Auto</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Sedán</a></li>
-                                        <li><a class="dropdown-item" href="#">SUV</a></li>
-                                        <li><a class="dropdown-item" href="#">Convertible</a></li>
-                                        <li><a class="dropdown-item" href="#">Doble Cabina</a></li>
-                                        <li><a class="dropdown-item" href="#">Furgón</a></li>
-                                        <li><a class="dropdown-item" href="#">Hatchback</a></li>
-                                        <li><a class="dropdown-item" href="#">Coupé</a></li>
-                                        <li><a class="dropdown-item" href="#">Station Wagon</a></li>
-                                    </ul>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                </li>
-                                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Marcas</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Chevrolet</a></li>
-                                        <li><a class="dropdown-item" href="#">Ford</a></li>
-                                        <li><a class="dropdown-item" href="#">Hyundai</a></li>
-                                        <li><a class="dropdown-item" href="#">Kia</a></li>
-                                        <li><a class="dropdown-item" href="#">Nissan</a></li>
-                                        <li><a class="dropdown-item" href="#">Mercedes</a></li>
-                                        <li><a class="dropdown-item" href="#">Peugeot</a></li>
-                                        <li><a class="dropdown-item" href="#">Toyota</a></li>
-                                    </ul>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                </li>
-                                <li><a class="dropdown-item" href="#">Nuevos</a></li>
-                                <li><a class="dropdown-item" href="#">Usados</a></li>
-                                <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex buscar">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
-                    <a href="#">
-                        <button style="margin: 10px;" type="button" class="btn btn-light btn-vende">Vende tu auto</button>
-                    </a>
-                    <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img style="width: 60px; height: 50px;" src="img/login.png" alt="user">
-                    </a>
-                    <a style="color: white; margin-right: 10px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Login
-                    </a>
-                </div>
-            </div>
-        </nav>
+    
+    <!-- Incluyendo Header -->
+    <div data-include="assets/header.html"></div>
 
-        <div class="container-fluid hero">
-            <img src="img/heroVendeAuto.jpg" alt="venta" class="img-fluid">
-        </div>
-        <br>
-        <div class="container">
-            <hr>
-        </div>
-        <br>
-    </header>
+    <!-- HeroImage -->
+    <div class="container-fluid hero">
+        <img src="img/heroVendeAuto.jpg" alt="venta" class="img-fluid">
+    </div>
+    <br>
+
+
     <!-- MODAL LOGIN Y REGISTRO -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -293,38 +224,11 @@
             </div>
         </form>
     </div>
-    <footer class="footer bg-dark ">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-4 logo-footer">
-                    <h1>Raio Macuin</h1>
-                </div>
-                <div class="col-md-8 social">
-                    <ul class="list-unstyled ">
-                        <li>
-                            <a href=" ">
-                                <i class="fab fa-facebook "> Facebook</i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href=" ">
-                                <i class="fab fa-twitter-square "> Twitter</i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href=" ">
-                                <i class="fab fa-instagram "> Instagram</i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
-            <div class="container derechos ">
-                <p><i class="fa fa-copyright " aria-hidden="true "></i> Todos los derechos reservados.</p>
-            </div>
-        </div>
-    </footer>
+
+    <!-- Incluyendo Footer -->
+    <div data-include="assets/footer.html"></div>
+    
+
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="js/formulario-validacion.js"></script>
