--- a/assets/footer.html
+++ b/assets/footer.html
@@ -7,17 +7,17 @@
             <div class="col-md-8 social ">
                 <ul class="list-unstyled ">
                     <li>
-                        <a href=" ">
+                        <a href="https://www.facebook.com/">
                             <i class="fab fa-facebook "> Facebook</i>
                         </a>
                     </li>
                     <li>
-                        <a href=" ">
+                        <a href="https://twitter.com/login">
                             <i class="fab fa-twitter-square "> Twitter</i>
                         </a>
                     </li>
                     <li>
-                        <a href=" ">
+                        <a href="https://www.instagram.com/">
                             <i class="fab fa-instagram "> Instagram</i>
                         </a>
                     </li>
