Cambiando nombre a archivo de validación de formulario con Bootstrap

--- a/contacto.html
+++ b/contacto.html
@@ -93,7 +93,7 @@
     
 
     <!-- SCRIPTS -->
-    <script type="text/javascript" src="js/formulario-validacion.js"></script>
+    <script type="text/javascript" src="js/validacion-bootstrap.js"></script>
     <script src="js/validacion-contacto.js"></script>
     <script src="js/envio-formulario.js"></script>
     <!-- Bootstrap Bundle with Popper -->
