--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <!-- Llamando archivo que agrega el header y footer con AJAX -->
     <script src="js/include-html.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Raio Macuin</title>
+    <link rel="stylesheet" href="css/style.css">
 
     <!--* ********** Etiquetas para el SEO ********** *-->
     <title>Raio Macuin</title>
@@ -38,8 +39,6 @@
     <!-- Incluyendo Header -->
     <div data-include="assets/header.html"></div>
 
-    <main class="container"></main>
-
     <!-- HeroImage -->
     <section class="home">
         <article class="hero-image">
@@ -53,7 +52,8 @@
         </article>
     </section>
 
-    
+    <!-- Contenido principal -->
+    <main class="container"></main>
 
     <!-- Incluyendo footer -->
     <div data-include="assets/footer.html"></div>
@@ -61,6 +61,9 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="js/validacion-bootstrap.js"></script>
+    <script src="js/include-components.js"></script>
+    <script src="js/validacion-contacto.js"></script>
+    <script src="js/envio-formulario.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 </body>
