--- a/assets/footer.html
+++ b/assets/footer.html
@@ -12,12 +12,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/login" target="_blank" rel="noopener>
+                        <a href="https://twitter.com/login" target="_blank" rel="noopener">
                             <i class="fab fa-twitter-square "> Twitter</i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener">
                             <i class="fab fa-instagram "> Instagram</i>
                         </a>
                     </li>
