--- a/assets/header.html
+++ b/assets/header.html
@@ -10,7 +10,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
@@ -46,7 +46,7 @@
                                 </li>
                             </li>
                             <li><a class="dropdown-item" href="#">Nuevos</a></li>
-                            <li><a class="dropdown-item" href="#">Usados</a></li>
+                            <li><a class="dropdown-item" href="../autosUsados.html">Usados</a></li>
                             <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
                         </ul>
                     </li>
