--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/autosUsados.css">
+    <link rel="stylesheet" href="css/contacto.css">
     <title>Raio Macuin</title>
 
     <!--* ********** Etiquetas para el SEO ********** *-->
@@ -42,7 +42,7 @@
 
     <!-- HeroImage -->
     <section class="home">
-        <article class="hero-image hero-image-usado">
+        <article class="hero-image hero-image-contacto">
             <aside class="hero-image-opacity">
                 <div class="hero-image-content">
                     <h2 class="hero-image-title ">
@@ -52,6 +52,41 @@
             </aside>
         </article>
     </section>
+
+    <!-- Contacto -->
+    <form class="contact-form box-shadow-1">
+        <input type="text" name="nombre" placeholder="Ingresa tu nombre *" title="Nombre sólo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
+
+        <input type="email" name="correo" placeholder="Ingresa tu correo *" title="Email incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+
+        <textarea name="comentarios" cols="50" rows="10" placeholder="Déjame tus comentarios *" title="Tu comentario no debe exceder los 255 carácteres" data-pattern="^.{1,255}$" required></textarea>
+
+        <div class="contact-form-loader text-center none">
+            <img  src="img/loader.svg" alt="Enviando...">
+        </div>
+
+        <input class="btn-contact" type="submit" value="ENVIAR MENSAJE">
+    </form>
+
+    <!-- Mensaje al enviar el formulario -->
+    <article id="gracias" class="modal">
+        <div class="modal-content">
+            <article class="contact-form-response">
+              <h3>
+                ¡Muchas Gracias!
+                <br>
+                Por tus comentarios
+              </h3>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M12,18c4,0,5-4,5-4H7C7,14,8,18,12,18z" />
+                <path
+                  d="M12,2C6.486,2,2,6.486,2,12c0,5.514,4.486,10,10,10s10-4.486,10-10C22,6.486,17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8 s3.589-8,8-8s8,3.589,8,8S16.411,20,12,20z" />
+                <path
+                  d="M13 12l2 .012C15.012 11.55 15.194 11 16 11s.988.55 1 1h2c0-1.206-.799-3-3-3S13 10.794 13 12zM8 11c.806 0 .988.55 1 1h2c0-1.206-.799-3-3-3s-3 1.794-3 3l2 .012C7.012 11.55 7.194 11 8 11z" />
+              </svg>
+            </article>
+          </div>
+    </article>
 
     
 
