Arreglando seccion de autos usados

--- a/assets/header.html
+++ b/assets/header.html
@@ -1,5 +1,5 @@
 <header class="encabezado">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark menu">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand logo-empresa" href="#">
                 <img src="img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top" style="margin-left: 10px;"> RAIO MACUIN
@@ -10,15 +10,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-<<<<<<< HEAD
                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-=======
-<<<<<<< HEAD
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-=======
-                        <a class="nav-link active enlace" aria-current="page" href="assets/components/carrusel-slider.html">Inicio</a>
->>>>>>> 866495fe99678d7ccd436866f0f70fac097ca591
->>>>>>> cbc6190c8be97a631622d8167ab815f09ccec027
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
@@ -54,28 +46,19 @@
                                 </li>
                             </li>
                             <li><a class="dropdown-item" href="#">Nuevos</a></li>
-<<<<<<< HEAD
                             <li><a class="dropdown-item" href="../autosUsados.html">Usados</a></li>
-=======
-<<<<<<< HEAD
-                            <li><a class="dropdown-item" href="autosUsados.html">Usados</a></li>
->>>>>>> cbc6190c8be97a631622d8167ab815f09ccec027
                             <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
-=======
-                            <li><a class="dropdown-item" href="#">Usados</a></li>
-                            <li><a class="dropdown-item enlace" href="assets/components/galeria-autos.html">Galeria</a></li>
->>>>>>> 866495fe99678d7ccd436866f0f70fac097ca591
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link enlace" href="assets/components/form-contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+                        <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex buscar">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
-                <a class="enlace" href="assets/components/form-vende-auto.html">
+                <a href="vendeauto.html">
                     <button style="margin: 10px;" type="button" class="btn btn-light btn-vende">Vende tu auto</button>
                 </a>
                 <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
