--- a/autosUsados.html
+++ b/autosUsados.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/autosUsados.css">
+    <link rel="stylesheet" href="css/albumAutos.css">
     <title>Raio Macuin</title>
 
     <!--* ********** Etiquetas para el SEO ********** *-->
@@ -45,7 +45,7 @@
         <article class="hero-image hero-image-usado">
             <aside class="hero-image-opacity">
                 <div class="hero-image-content">
-                    <h2 class="hero-image-title">
+                    <h2 class="hero-image-title ">
                         ¿Sabías que tenemos autos usados?<br>¡De todo en Raio Macuin!
                     </h2>
                 </div>
@@ -53,7 +53,7 @@
         </article>
     </section>
 
-   
+    
 
     <!-- Incluyendo Footer -->
     <div data-include="assets/footer.html"></div>
