--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <!-- Llamando archivo que agrega el header y footer con AJAX -->
     <script src="js/include-html.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="css/index.css">
 
@@ -52,18 +50,103 @@
         </article>
     </section>
 
-    <!-- Contenido principal -->
-    <main class="container"></main>
+    <section class="contenido ">
+        <!-- agregando al 'style' una variable CSS con la imagen del HeroImage-->
+        <article class="hero-image">
+            <aside class="hero-image-opacity">
+                <div class="container-fluid">
+                    <hr>
+                    <h2 class="section-title ">¡Variedad de modelos y ofertas!</h2>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+                            <div class="card" style="width: 100%; margin-top: 10px;">
+                                <img src="img/imagen-info1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body bg-dark" style="color: white;">
+                                    <h5 class="card-title">¿Conoces los beneficios de comprar tu auto con nosotros?</h5>
+                                    <p class="card-text" style="text-align: justify;">Raio Macuin tiene los mejores precios de compra de todos los portales. Cotiza en 2 minutos y si tienes alguna duda, estamos a tu disposición. Recibe el mejor precio del mercado y sin moverte de tu casa ¡Tú no te mueves!
+                                        Raio Macuin lo hace por ti. Para tu comodidad podemos coordinar una inspección en tu domicilio, o recibirte en nuestras sucursales.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6" style="margin-top: 10px;">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators" style="margin: 5px;">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <div class="card" style="width: 100%;">
+                                            <img src="img/slider01.jpg" class="d-block w-100 card-img-top" alt="...">
+                                            <div class="card-body bg-dark" style="color: white;">
+                                                <h5 class="card-title">Card title</h5>
+                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
+                                                    at deserunt eaque."</p>
+                                                <hr>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="card" style="width: 100%;">
+                                            <img src="img/slider02.jpg" class="d-block w-100 card-img-top" alt="...">
+                                            <div class="card-body bg-dark" style="color: white;">
+                                                <h5 class="card-title">Card title</h5>
+                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
+                                                    at deserunt eaque."</p>
+                                                <hr>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="card" style="width: 100%;">
+                                            <img src="img/slider03.jpg" class="d-block w-100 card-img-top" alt="...">
+                                            <div class="card-body bg-dark" style="color: white;">
+                                                <h5 class="card-title">Card title</h5>
+                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
+                                                    at deserunt eaque."</p>
+                                                <hr>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="card" style="width: 100%;">
+                                            <img src="img/slider04.jpg" class="d-block w-100 card-img-top" alt="...">
+                                            <div class="card-body bg-dark" style="color: white;">
+                                                <h5 class="card-title">Card title</h5>
+                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
+                                                    at deserunt eaque."</p>
+                                                <hr>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+                            <div class="card " style="width: 100%; margin-top: 10px; " ">
+                                <img src="img/imagen-info2.jpg " class="card-img-top " alt="... ">
+                                <div class="card-body bg-dark " style="color: white; ">
+                                    <h5 class="card-title ">¿Sabías que podemos vender tu auto por ti?</h5>
+                                    <p class="card-text " style="text-align: justify; ">Los vehículos pueden tener diferentes accesorios adicionales o también pueden presentar deterioros físicos. Estos factores se toman en cuenta para la oferta final, junto a una prueba de conducción y verificación
+                                        interior/exterior del vehículo. Todo este proceso dura sólo 30 minutos. Esta evaluación y todos los trámites legales no tienen costo para ti. ¡Nosotros nos encargamos de todo!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </aside>
+        </article>
+    </section>
 
     <!-- Incluyendo footer -->
     <div data-include="assets/footer.html"></div>
 
 
     <!-- SCRIPTS -->
-    <script type="text/javascript" src="js/validacion-bootstrap.js"></script>
-    <script src="js/include-components.js"></script>
-    <script src="js/validacion-contacto.js"></script>
-    <script src="js/envio-formulario.js"></script>
+    <script type="text/javascript " src="js/formulario-validacion.js "></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 </body>
