Se agrega autosNuevos

--- a/assets/header.html
+++ b/assets/header.html
@@ -45,7 +45,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                             </li>
-                            <li><a class="dropdown-item" href="#">Nuevos</a></li>
+                            <li><a class="dropdown-item" href="../autosNuevos.html">Nuevos</a></li>
                             <li><a class="dropdown-item" href="../autosUsados.html">Usados</a></li>
                             <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
                         </ul>
