fix carousel autosNuevos

--- a/autosNuevos.html
+++ b/autosNuevos.html
@@ -239,20 +239,19 @@
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/slider1-usados.jpg" class="d-block w-100" alt="AOE2DE" style="max-height: 750px; min-height: 123px;">
+                        <img src="img/slider1-usados.jpg" class="d-block w-100" alt="AOE2DE">
                         <div class="container carousel-caption d-md-block texto-carrusel" style="background-color:black;">
                             <div class="container">
-                                <h3>¡Gran variedad de autos usados!</h3>
+                                <h3>¡Gran variedad de autos nuevos!</h3>
                             </div>
                             <hr>
                             <div class="container">
-                                <p>Age of Empires II: Definitive Edition, uno de los juegos de estrategia más populares de la historia con increíbles gráficos 4K Ultra HD, una nueva banda sonora totalmente remasterizada y la expansión “Los últimos kanes”,
-                                    que cuenta con 3 nuevas campañas y 4 nuevas civilizaciones.</p>
+                                <p>Contamos con un gran inverntario de autos de lujo de todos los tipos y precios para que puedas llevarte. !Tu proóximo auto se encuentra aquí, que esperas!</p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/slider2-usados.jpg" class="d-block w-100" alt="CBNST" style="max-height: 750px; min-height: 123px;">
+                        <img src="img/slider2-usados.jpg" class="d-block w-100" alt="CBNST">
                         <div class="container carousel-caption d-md-block texto-carrusel" style="background-color:black">
                             <div class="container">
                                 <h3>¡Protegemos tu compra!</h3>
@@ -264,7 +263,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/slider3-usados.jpg" class="d-block w-100" alt="RAGE" style="max-height: 750px; min-height: 123px;">
+                        <img src="img/slider3-usados.jpg" class="d-block w-100" alt="RAGE">
                         <div class="container carousel-caption d-md-block texto-carrusel" style="background-color:black">
                             <div class="container">
                                 <h3>¡Te ayudamos a vender tu auto!</h3>
