Integración de API Stripe Autos Nuevos, modificaciones HTML y comentarios de código

--- a/assets/stripe-success.html
+++ b/assets/stripe-success.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/autosUsados.css">
+    <link rel="stylesheet" href="../css/checkout.css">
     <title>Pago exitoso con Stripe</title>
 </head>
 <body>
-    <div class="succes">
+    <div class="boxPago">
         <h2>Pago exitoso con Stripe</h2>
-        <p>Gracias por tu compra 😃</p>
+        <p>Gracias por tu compra </p>
     </div>
 </body>
 </html>
