--- a/autosNuevos.html
+++ b/autosNuevos.html
@@ -38,7 +38,7 @@
   <div data-include="assets/header.html"></div>
   <!-- HeroImage -->
   <section class="home">
-      <article class="hero-image hero-image-nuevos">
+      <article class="hero-image hero-image-nuevo">
           <aside class="hero-image-opacity">
               <div class="hero-image-content">
                   <h2 class="hero-image-title ">
